--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "connect.js",
   "scripts": {
     "start": "node ./bin/www",
-    "emulate": "firebase emulators:start"
+    "emulate": "firebase emulators:start",
+    "lint": "eslint ."
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -21,5 +22,8 @@
   },
   "engines": {
     "node": "16"
+  },
+  "devDependencies": {
+    "eslint": "^8.54.0"
   }
 }
