--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "connect-mongo": "^5.1.0",
+    "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "~1.4.4",
+    "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "firebase-admin": "^11.11.1",
     "firebase-functions": "^4.5.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "morgan": "~1.9.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-google-oidc": "^0.1.0",
+    "passport-jwt": "^4.0.1",
+    "session-file-store": "^1.5.0"
   },
   "engines": {
     "node": "16"
