--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-google-oidc": "^0.1.0",
     "passport-jwt": "^4.0.1",
+    "pdfkit": "^0.14.0",
     "session-file-store": "^1.5.0"
   },
   "engines": {
