--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.0.1",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
