--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "emulate": "firebase emulators:start",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "deploy": "firebase deploy --only functions"
   },
   "dependencies": {
     "connect-mongo": "^5.1.0",
